2000-08-02  Gene Z. Ragan  <gzr@eazel.com>

	Fixed bug 1836, Description list item icon wrong.
	
	* mime-type-capplet/nautilus-mime-type-capplet.c:
	(populate_mime_list), (gdk_font_get_bold),
	Set up proper and scaled description column icon.
	
	(capplet_gdk_pixbuf_scale_to_fit):
	New function that scales an gdk-pixbuf to the requested
	width and height.  Copied from libnautilus.

2000-08-01  Darin Adler  <darin@eazel.com>

	* data/mime/gnome-vfs.keys:
	Added description for "x-special/virtual-directory", which
	will probably be renamed soon.

2000-08-01  Ian McKellar  <yakk@yakk.net.au>

	* AUTHORS:
	Updated ftp method info.

	* modules/http-method.c: (process_propfind_response),
	(make_propfind_request), (do_read_directory):
	Fixed the PROPFIND response parsing to handle Xythos servers
	better.

2000-07-30  ERDI Gergo  <cactus@cactus.rulez.org>

	* mime-type-capplet/nautilus-mime-type-capplet-dialogs.c
	(name_from_oaf_server_info): changed oaf_server_info_attr_lookup
	calls to oaf_server_info_prop_lookup

2000-07-28  Gene Z. Ragan  <gzr@eazel.com>

	* mime-type-capplet/nautilus-mime-type-capplet.c:
	(init_mime_capplet), (pixmap_file), (gtk_widget_make_bold),
	(gtk_widget_set_font), (gtk_style_set_font), (gdk_font_get_bold):
	New function to set the font of a widget to bold.  These were
	borrowed from libnautilus-extensions.
	
2000-07-28  Gene Z. Ragan  <gzr@eazel.com>

	* data/mime/gnome-vfs-mime-magic:
	* data/mime/gnome-vfs.keys:
	Added magic and mime type for GMC links.
	application/x-gmc-link
	
2000-07-27  Seth Nickell  <seth@eazel.com>

	* libgnomevfs/gnome-vfs-file-info.h:
	Added SYMLINK macros.
	
	* libgnomevfs/gnome-vfs-types.h:
	Added GNOME_VFS_FILE_FLAGS_SYMLINK	

	* modules/file-method.c: (get_stat_info):
	Changed code around to properly stat and lstat, and use flags.
	
	* test/gnome-file-selection/gnome-file-selection.c:
	(populate_callback):
	* test/test-async-directory.c: (print_list):
	* test/test-directory-visit.c: (directory_visit_callback):